--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -47,7 +47,6 @@
         height: auto;
         flex-direction: row;
         gap: 2rem;
-        z-index: 2;
     }
     .nav-links a{
         text-decoration: none;
