--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -53,7 +53,7 @@
         list-style: none;
         width: 100%;
         background-color: #706f6e;
-        position: absolute;
+        position: relative;
         top: var(--altura_header);
         left: 0;
         height: 0;
@@ -63,7 +63,7 @@
         justify-content: center;
         align-items: center;
         gap: 5rem;
-        transition: .3s;
+        transition: 0.3s;
         z-index: 2;
     }
 
